syntax="proto3";

package pb;

service ServerB {
    rpc Hello (HelloReq) returns (HelloResp);
}

message HelloReq {
    string name = 1;
}

message HelloResp {
    string echo = 1;
}